--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -17,7 +17,7 @@
         </MudStack>
         <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4 pb-2">RNG modifier subtracts from the minimum RNG and and adds to maximum RNG</MudText>
     </MudPaper>
-    <MudDataGrid T="Climate" Items="@ClimateData" Dense="true" Class="overflow-hidden">
+    <MudDataGrid T="Climate" Items="@ClimateData" RowsPerPage="15" Dense="true" Class="overflow-hidden">
         <Columns>
             <TemplateColumn T="Climate" Title="Icon" Sortable="false">
                 <CellTemplate>
