--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -85,14 +85,11 @@
                         <MudStack AlignItems="AlignItems.Center">
                             <MudText>RNG modifiers</MudText>
                             <MudDivider />
-                            @if (context.Item.TraitEffect != null)
-                            {
-                                <MudStack Row="true" Spacing="1" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
-                                    <MudText Typo="Typo.caption">@context.Item.TraitEffect.MinRNG</MudText>
-                                    <MudIcon Size="Size.Small" Icon="@IconCollection.ArrowMoveHorizontal" />
-                                    <MudText Typo="Typo.caption">@context.Item.TraitEffect.MaxRNG</MudText>
-                                </MudStack>
-                            }
+                            <MudStack Row="true" Spacing="1" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
+                                <MudText Typo="Typo.caption">@context.Item.RngMin</MudText>
+                                <MudIcon Size="Size.Small" Icon="@IconCollection.ArrowMoveHorizontal" />
+                                <MudText Typo="Typo.caption">@context.Item.RngMax</MudText>
+                            </MudStack>
                         </MudStack>
                     </MudPaper>
                 </MudStack>
