--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -18,7 +18,7 @@
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="Engine" Items="@EngineData" Dense="true">
+    <MudDataGrid T="Engine" Items="@EngineData" RowsPerPage="15" Dense="true">
         <Columns>
             <HierarchyColumn T="Engine" />
             <PropertyColumn Property="e => e!.Name" />
