--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -17,7 +17,7 @@
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="Team" Items="@TeamData" Dense="true">
+    <MudDataGrid T="Team" Items="@TeamData" RowsPerPage="15" Dense="true">
         <Columns>
             <HierarchyColumn T="Team" />
             <PropertyColumn Property="e => e!.Name" />
