--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -17,7 +17,7 @@
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="Track" Items="@TrackData" Dense="true">
+    <MudDataGrid T="Track" Items="@TrackData" RowsPerPage="15" Dense="true">
         <Columns>
             <HierarchyColumn T="Track" />
             <PropertyColumn Property="e => e!.Name" />
