--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -19,7 +19,7 @@
             </MudButtonGroup>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="Trait" Items="@TraitData" Dense="true">
+    <MudDataGrid T="Trait" Items="@TraitData" RowsPerPage="15" Dense="true">
         <Columns>
             <HierarchyColumn T="Trait" />
             <PropertyColumn Property="e => e!.Name" />
