--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -11,7 +11,7 @@
             <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
     </MudPaper>
-    <MudDataGrid T="Incident" Items="@IncidentData" Dense="true">
+    <MudDataGrid T="Incident" Items="@IncidentData" RowsPerPage="15" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e!.Name" />
             <PropertyColumn Property="e => e!.Category" Filterable="true" />
