--- a/SimTECH/SimTECH/Pages/Factors/Tyres.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Tyres.razor
@@ -15,7 +15,7 @@
         </MudStack>
         <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4">Distance per advance: @(advanceDistance)Km</MudText>
     </MudPaper>
-    <MudDataGrid T="Tyre" Items="@TyreData" Bordered="true" Dense="true">
+    <MudDataGrid T="Tyre" Items="@TyreData" RowsPerPage="15" Bordered="true" Dense="true">
         <Columns>
             <PropertyColumn Property="e => e!.Name" CellStyleFunc="@_applyTyreColouring" />
             <PropertyColumn Property="e => e!.ForWet" />
@@ -53,6 +53,9 @@
                 </CellTemplate>
             </TemplateColumn>
         </Columns>
+        <PagerContent>
+            <MudDataGridPager T="Tyre" />
+        </PagerContent>
     </MudDataGrid>
 </MudContainer>
 
