--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -143,7 +143,8 @@
         </MudItem>
         <MudItem xs="12" md="3">
             <MudPaper Elevation="5" Class="pa-4 mud-height-full">
-                
+                <MudText Typo="Typo.h5">Nothing yet</MudText>
+                <MudDivider />
             </MudPaper>
         </MudItem>
     </MudGrid>
