--- a/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
@@ -9,8 +9,8 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudGrid>
         <MudItem xs="12">
-            <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
-                <MudText Typo="Typo.h4">Trait assigner</MudText>
+            <MudPaper Elevation="15" Height="100px" Class="d-flex flex-column justify-center align-center pa-4">
+                <MudText Typo="Typo.h3">Trait assigner</MudText>
                 <MudText Color="Color.Error">Page as a whole is very much too simplistic and crude but it works!</MudText>
             </MudPaper>
         </MudItem>
@@ -38,12 +38,12 @@
                     {
                         <MudText Typo="Typo.subtitle1" Color="Color.Success">Relevant traits</MudText>
                         <MudDivider />
-                        @*@foreach (var trait in RelevantTraits)
+                        @foreach (var trait in RelevantTraits)
                         {
                             <MudTooltip Text="@(trait.Description)" Color="Color.Primary">
                                 <MudText Color="Color.Primary">@(trait.Name) - [@(trait.Id)]</MudText>
                             </MudTooltip>
-                        }*@
+                        }
 
                         <MudListExtended T="string" Dense="true">
                             @foreach (var trait in RelevantTraits)
@@ -150,16 +150,6 @@
         AllTraits = await _traitService.GetTraits(StateFilter.Active);
     }
 
-    //async Task SetAndLoadEntrants(MudChip? entrantChip)
-    //{
-    //    if (entrantChip == null)
-    //        return;
-
-    //    activeEntrant = (Entrant)entrantChip.Value;
-
-    //    await LoadEntrants();
-    //}
-
     async Task LoadEntrants()
     {
         if (entrantChip == null)
@@ -194,7 +184,6 @@
         RelevantTraits = AllTraits.Where(e => e.Type == activeEntrant).ToList();
 
         loadingEntrants = false;
-        StateHasChanged();
     }
 
     private string GetReadableTrait(long id) => AllTraits.Find(e => e.Id == id)?.Name ?? "Unknown";
@@ -228,11 +217,6 @@
         assignee.ExistingTraitIds.Add(randomTrait.Id);
     }
 
-    private void PageChange(int index)
-    {
-        _table.NavigateTo(index - 1);
-    }
-
     private async Task RemoveAssignedTrait(TableRowClickEventArgs<EntrantAssignee> rowItem)
     {
         bool? confirm = await _dialogService.ShowMessageBox(
@@ -244,6 +228,8 @@
         {
             foreach (var assignedId in rowItem.Item.AssignedTraitIds)
                 rowItem.Item.ExistingTraitIds.Remove(assignedId);
+
+            rowItem.Item.AssignedTraitIds.Clear();
 
             AssignedEntrants.Remove(rowItem.Item);
         }
