--- a/SimTECH/SimTECH/Pages/Contracts/ManagerSettings.razor
+++ b/SimTECH/SimTECH/Pages/Contracts/ManagerSettings.razor
@@ -28,8 +28,8 @@
     [Parameter] public EventCallback<Tuple<long, bool, bool>> OnLoadSetting { get; set; }
 
     private long selectedLeagueId;
-    private bool onlyLeagueTeams = true;
-    private bool onlyLeagueDrivers = true;
+    private bool onlyLeagueTeams;
+    private bool onlyLeagueDrivers;
 
     private async Task HandleSettingLoad()
     {
