motif avec une shoguns clan

--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -28,6 +28,11 @@
     src: url('../fonts/Proxima Nova Black.otf') format('opentype');
 }
 
+@font-face {
+    font-family: "ShogunsClan";
+    src: url('../fonts/Shoguns Clan.ttf') format('truetype');
+}
+
 .text-border-stroke {
     -webkit-text-stroke: 1px black;
 }
@@ -247,10 +252,13 @@ th {
         content: "An error has occurred."
     }
 
-/* tabler icons */
-/*.icon-tabler {
-    color: red;
-    width: 32px;
-    height: 32px;
-    stroke-width: 1.25;
-}*/
+/* special stuff */
+
+.header-special {
+    font-family: ShogunsClan !important;
+    font-size: 3em;
+}
+
+.cubic-repeat-bg {
+    background: url('../images/mmmotif.svg') repeat;
+}
