--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -6,8 +6,13 @@
 
 <PageTitle>Test</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-16 px-8">
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-16 px-8 cubic-repeat-bg">
     <MudGrid>
+        <MudItem xs="12">
+            <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
+                <div class="header-special">Testing Zone</div>
+            </MudPaper>
+        </MudItem>
         <MudItem xs="9">
             <MudGrid>
                 <MudItem xs="12" sm="6">
