--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
@@ -1,7 +1,4 @@
-﻿@inject SeasonEntrantService _entrantService
-@inject NavigationManager _nav
-
-<MudContainer MaxWidth="MaxWidth.False">
+﻿<MudContainer MaxWidth="MaxWidth.False">
     <MudGrid>
         <MudItem xs="3">
             <MudPaper Elevation="5">
