--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -1,15 +1,18 @@
 ﻿@page "/entrantwizard/{SeasonId:long}"
-@using MudBlazor.Extensions
-@using MudExtensions.Enums;
-@using MudExtensions.Utilities
-@using SimTECH.Pages.Season.EntrantWizard.Steps
 @inject ContractService _contractService
+@inject DriverService _driverService
+@inject EngineService _engineService
+@inject TeamService _teamService
 @inject LeagueService _leagueService
 @inject SeasonService _seasonService
 @inject SeasonEntrantService _entrantService
 @inject BreadcrumbProvider _bread
 @inject NavigationManager _nav
 @inject IOptions<SimConfig> _config
+@using MudBlazor.Extensions
+@using MudExtensions.Enums;
+@using MudExtensions.Utilities
+@using SimTECH.Pages.Season.EntrantWizard.Steps
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-4">
     <MudPaper Elevation="5">
@@ -24,32 +27,37 @@
                         HeaderBadgeView="HeaderBadgeView.GreyOutIncomplete"
                         PreventStepChangeAsync="InvalidStepPrevention">
                 <StaticContent>
-                    <MudStack Row="true" AlignItems="AlignItems.Center">
-                        <MudText Typo="Typo.h5">@stepTitle</MudText>
-                        <MudSpacer />
-                        <MudStack Class="pa-0 mx-2">
-                            @foreach (var error in errors)
+                    <MudStack Row="true" AlignItems="AlignItems.Center" Justify="Justify.SpaceBetween">
+                        <div style="width:25%">
+                            <MudStack Class="pa-0 mx-2">
+                                @foreach (var error in errors)
+                                {
+                                    <MudText Typo="Typo.body2" Color="Color.Error">@error</MudText>
+                                }
+                            </MudStack>
+                        </div>
+
+                        <MudText Typo="Typo.h3">@stepTitle</MudText>
+
+                        <div style="width:25%">
+                            @if (stepper?.IsAllStepsCompleted() == true)
                             {
-                                <MudText Color="Color.Error">@error</MudText>
+                                <MudButton FullWidth="true" Variant="Variant.Outlined" Color="Color.Success" OnClick="AddAllEntrants">Confirm & save</MudButton>
                             }
-                        </MudStack>
-                        @if (stepper?.IsAllStepsCompleted() == true)
-                        {
-                            <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="AddAllEntrants">Confirm & save</MudButton>
-                        }
+                        </div>
                     </MudStack>
                 </StaticContent>
                 <ChildContent>
                     <MudStep Title="Add engines" Icon="@IconCollection.Engine">
                         <ChildContent>
-                            <AddEngines />
+                            <AddEngines Engines="Engines" />
                         </ChildContent>
                     </MudStep>
                     <MudStep Title="Edit engines" Icon="@IconCollection.Engine">
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 1)
                             {
-                                <EditEngines LeagueId="@Season.LeagueId" SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
+                                <EditEngines LeagueId="@Season.LeagueId" SeasonId="@SeasonId" PreviousSeasonId="@PreviousSeason?.Id" />
                             }
                         </ChildContent>
                     </MudStep>
@@ -57,7 +65,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 2)
                             {
-                                <AddTeams Contracts="Contracts" />
+                                <AddTeams Teams="Teams" Contracts="Contracts" />
                             }
                         </ChildContent>
                     </MudStep>
@@ -65,7 +73,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 3)
                             {
-                                <EditTeams LeagueId="@Season.LeagueId" SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
+                                <EditTeams LeagueId="@Season.LeagueId" SeasonId="@SeasonId" PreviousSeasonId="@PreviousSeason?.Id" />
                             }
                         </ChildContent>
                     </MudStep>
@@ -81,7 +89,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 5)
                             {
-                                <AddDrivers Year="@(Season.Year)" Contracts="Contracts" />
+                                <AddDrivers Drivers="Drivers" Year="@Season.Year" Contracts="Contracts" />
                             }
                         </ChildContent>
                     </MudStep>
@@ -89,7 +97,7 @@
                         <ChildContent>
                             @if (stepper.GetActiveIndex() == 6)
                             {
-                                <EditDrivers SeasonId="@SeasonId" PreviousSeasonId="@(PreviousSeason?.Id ?? null)" />
+                                <EditDrivers SeasonId="@SeasonId" PreviousSeasonId="@PreviousSeason?.Id" />
                             }
                         </ChildContent>
                     </MudStep>
@@ -121,18 +129,25 @@
     public AddEntrantsModel Model { get; set; } = new();
     public Season Season { get; set; }
     public Season? PreviousSeason { get; set; }
+    protected List<Engine> Engines { get; set; } = new();
+    protected List<Team> Teams { get; set; } = new();
+    protected List<Driver> Drivers { get; set; } = new();
     protected List<Contract> Contracts { get; set; } = new();
 
-    MudStepper stepper;
+    private MudStepper stepper;
 
-    bool loading = true;
-    string stepTitle = "Add engines";
-    List<string> errors = new();
+    private bool loading = true;
+    private string stepTitle = "Add engines";
+    private List<string> errors = new();
 
     protected override async Task OnInitializedAsync()
     {
         Season = await _seasonService.GetSeasonById(SeasonId);
         PreviousSeason = await _seasonService.FindRecentClosedSeason(Season.LeagueId);
+        // TODO: Wizard deserves a refactor in that we might want to retrieve these values on a per-step basis instead of all at once
+        Engines = await _engineService.GetEngines();
+        Teams = await _teamService.GetTeams();
+        Drivers = await _driverService.GetAvailableDrivers();
         Contracts = await _contractService.GetLeagueContracts(Season.LeagueId);
 
         var league = await _leagueService.GetLeagueById(Season.LeagueId);
@@ -257,6 +272,36 @@
 
         return Task.FromResult(false);
     }
+
+    //private async Task RetrieveStepData(int index)
+    //{
+    //    switch (index)
+    //    {
+    //        case 0:
+                
+    //            break;
+    //    }
+    //}
+
+    //private async Task SetEngineEditors()
+    //{
+    //    Model.SeasonEngines.Clear();
+
+    //    foreach (var engine in Model.BaseEngines.Where(e => !(Model.SeasonEngines.Select(se => se.EngineId).Contains(e.Id))))
+    //    {
+    //        var previousEngine = await _entrantService.FindRecentSeasonEngine(engine.Id, Model.LeagueId);
+
+    //        var model = new EditSeasonEngineModel(previousEngine);
+    //        model.ResetIdentifierFields();
+    //        model.SeasonId = SeasonId;
+    //        model.EngineId = engine.Id;
+    //        model.Name = string.IsNullOrEmpty(model.Name) ? engine.Name : model.Name;
+
+    //        Model.SeasonEngines.Add(model);
+    //    }
+
+    //    Model.RemoveUnsetEngines();
+    //}
 
     private void SetTitle(int forIndex)
     {
