--- a/SimTECH/SimTECH/Pages/Racing/SignalNote.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SignalNote.razor
@@ -1,5 +1,5 @@
 ﻿<MudPaper Class="absolute overflow-visible" Style="@_styles">
-    <SignalIcon Signal="Signal" Size="Size" />
+    <SignalIcon Signal="@Signal" Size="@Size" />
 </MudPaper>
 
 @code {
