--- a/SimTECH/SimTECH/Pages/Season/Development/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/DevelopSettings.razor
@@ -69,4 +69,51 @@
 @code {
     Entrant _activeEntrant = Entrant.Driver;
     Quantifier _selectedType = Quantifier.Range;
+
+    async Task EntrantChipChanged(MudChip? entrantChip)
+    {
+        if (entrantChip == null)
+            return;
+
+        //_selectedTarget = Aspect.Reliability;
+        //_activeEntrant = (Entrant)entrantChip.Value;
+
+        //await ReloadDeveloped(_activeEntrant);
+        //ApplyCommon();
+    }
+
+    void TypeChipChanged(MudChip? typeChip)
+    {
+        if (typeChip == null)
+            return;
+
+        //_selectedType = (Quantifier)typeChip.Value;
+        //ApplyCommon();
+    }
+
+    async Task TargetChipChanged(MudChip? devChip)
+    {
+        if (devChip == null)
+            return;
+
+        //_selectedTarget = (Aspect)devChip.Value;
+        //await ReloadDeveloped(_activeEntrant);
+        //ApplyCommon();
+    }
+
+    void ApplyMinRange(int newMin)
+    {
+        //currentMin = newMin;
+
+        //foreach (var entrant in DevelopedEntrants)
+        //    entrant.Min = newMin;
+    }
+
+    void ApplyMaxRange(int newMax)
+    {
+        //currentMax = newMax;
+
+        //foreach (var entrant in DevelopedEntrants)
+        //    entrant.Max = newMax;
+    }
 }
