--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
@@ -44,10 +44,10 @@
                         <MudTextField @bind-Value="@context.Principal" Required />
                     </MudTd>
                     <MudTd DataLabel="Colour">
-                        <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" />
+                        <MudColorPicker @bind-Text="@context.Colour" />
                     </MudTd>
                     <MudTd DataLabel="Accent">
-                        <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" />
+                        <MudColorPicker @bind-Text="@context.Accent" />
                     </MudTd>
                     <MudTd DataLabel="Manufacturer">
                         <MudSelect T="long" @bind-Value="@context.ManufacturerId" Required>
