--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -1,8 +1,5 @@
 ﻿@page "/overview/{SeasonId:long}"
 @page "/overview/{SeasonId:long}/{TabIndex:int}"
-@using SimTECH.Pages.Season.Entrants;
-@using SimTECH.Pages.Season.Stats;
-@using SimTECH.Pages.Season.ScoreStandings
 @inject ContractService _contractService
 @inject RaceService _raceService
 @inject SeasonService _seasonService
@@ -11,6 +8,9 @@
 @inject NavigationManager _nav
 @inject IDialogService _dialogService
 @inject ISnackbar _snackbar
+@using SimTECH.Pages.Season.Entrants;
+@using SimTECH.Pages.Season.Stats;
+@using SimTECH.Pages.Season.ScoreStandings
 
 <PageTitle>Overview</PageTitle>
 
@@ -130,8 +130,11 @@
                         </MudItem>
                     </MudGrid>
                 </MudTabPanel>
-                <MudTabPanel Text="Calendar">
-                    <Calendar />
+                <MudTabPanel Text="Calendar" OnClick="OnOpenCalendar">
+                    @if (tempCalendarVisible)
+                    {
+                        <Calendar />
+                    }
                 </MudTabPanel>
                 <MudTabPanel Text="Standings">
                     <Standings />
@@ -174,6 +177,7 @@
     public Race? NextRace { get; set; }
 
     int activeTabIndex = 0;
+    bool tempCalendarVisible = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -190,6 +194,12 @@
             new BreadcrumbItem("Seasons", href: "seasons"),
             new BreadcrumbItem("Overview", href: $"overview/{SeasonId}", disabled: true),
         });
+    }
+
+    private async Task OnOpenCalendar()
+    {
+        await Task.Delay(5000);
+        tempCalendarVisible = true;
     }
 
     async Task StartSeason()
